--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 .gradle
 *.iml
 .idea/
+build/
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Mac
+.DS_Store
+
+# Maven
+log/
+target/
