--- a/DaoCore/build.gradle
+++ b/DaoCore/build.gradle
@@ -27,6 +27,7 @@ configurations {
 }
 
 dependencies {
+    compile('com.google.code.gson:gson:2.2.4')
     provided 'com.google.android:android:4.1.1.4'
     provided 'com.google.android:android-test:4.1.1.4'
     provided 'com.google.android:annotations:4.1.1.4'
