--- a/DaoExample/build.gradle
+++ b/DaoExample/build.gradle
@@ -11,14 +11,13 @@ repositories {
 }
 
 dependencies {
-    compile('de.greenrobot:greendao:1.3.0')
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 sourceSets {
     main {
         java {
             srcDir 'src'
-            srcDir 'src-gen'
             srcDir 'gen'
         }
     }
