--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include 'DaoCore', 'DaoGenerator', 'DaoExampleGenerator', 'DaoExample', 'GreenSync'
+include 'DaoCore', 'DaoGenerator', 'DaoExampleGenerator', 'DaoExample'
 // include 'DaoTest' // Travis needs some Android setup for this
