--- a/DaoExample/AndroidManifest.xml
+++ b/DaoExample/AndroidManifest.xml
@@ -3,9 +3,10 @@
       package="de.greenrobot.daoexample"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:minSdkVersion="8" />
 
-    <instrumentation android:targetPackage="de.greenrobot.daoexample" android:name="android.test.InstrumentationTestRunner" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".NoteActivity">
             <intent-filter>
