--- a/DaoExample/build.gradle
+++ b/DaoExample/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
+    compile ('com.mcxiaoke.volley:library:1.0.2');
 }
 
 sourceSets {
